<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_common_schedules"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="commonSchedules"
            android:text="@string/bus_button_one"
            android:textSize="20sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:background="@color/gray_title" />

        <Button
            android:id="@+id/button_special_schedules"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="specialSchedules"
            android:text="@string/bus_button_two"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top" >

            <ImageView
                android:id="@+id/schudeles_bus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|top|left"
                android:contentDescription="@string/conten_description_image_bus"
                android:scaleType="fitXY" >
            </ImageView>
        </HorizontalScrollView>
    </ScrollView>

</LinearLayout>