<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#F4F3F0"
    android:orientation="vertical"
    tools:ignore="ContentDescription" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingRight="2sp"
                android:text="@string/initial_activity_name"
                android:textColor="@android:color/darker_gray"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_activity_number_name"
                android:textColor="@color/dark_red"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingRight="20dp"
            tools:ignore="NestedWeights" >

            <ImageButton
                android:id="@+id/ImageButton1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="pressedBus"
                android:scaleType="centerInside"
                android:src="@drawable/bus" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/schedules"
                android:textColor="@color/gray_button_bar_map"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="pressedCareers"
                android:scaleType="centerInside"
                android:src="@drawable/materia" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/initial_activity_career"
                android:textColor="@color/gray_button_bar_map"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingRight="20dp"
            tools:ignore="NestedWeights" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="pressedMap"
                android:scaleType="centerInside"
                android:src="@drawable/map" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/initial_activity_map"
                android:textColor="@color/gray_button_bar_map"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="pressedService"
                android:scaleType="centerInside"
                android:src="@drawable/info" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/initial_activity_service"
                android:textColor="@color/gray_button_bar_map"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/com_facebook_loginbutton_blue"
        android:onClick="facebook"
        android:text="@string/initial_activity_button_facebook"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:typeface="sans"
        android:visibility="visible" />

</LinearLayout>