<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:layout_margin="0dp"
    android:background="#F4F3F0" >

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="false"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:padding="5dp" >

        <com.facebook.widget.LoginButton
            android:id="@+id/authButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp" />

        <TextView
            android:id="@+id/textInitialFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/facebook_activity_initiate"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/gray_button_bar_map" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="15dp"
            android:background="#F4F3F0" >
        </View>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="10dp" >

            <TextView
                android:id="@+id/textShared"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/gray_map_background"
                android:text="@string/facebook_activity_text_shared"
                android:textColor="@color/gray_button_bar_map"
                android:textSize="18sp"
                android:visibility="invisible" />

            <View
                android:layout_width="10sp"
                android:layout_height="fill_parent"
                android:background="#F4F3F0" >
            </View>

            <Button
                android:id="@+id/shareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/selector_button_facebook"
                android:text="@string/facebook_activity_share"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:typeface="sans"
                android:visibility="invisible" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:background="@color/gray_map_background" >
        </View>

        <View
            android:id="@+id/lineSeparatingFacebook"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginRight="110dp"
            android:background="#3B5998"
            android:visibility="invisible" >
        </View>

        <View
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:background="@color/gray_map_background" >
        </View>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="10dp" >

            <TextView
                android:id="@+id/textComment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/gray_map_background"
                android:text="@string/facebook_activity_text_comment"
                android:textColor="@color/gray_button_bar_map"
                android:textSize="18sp"
                android:visibility="invisible" />

            <View
                android:layout_width="10sp"
                android:layout_height="fill_parent"
                android:background="#F4F3F0" >
            </View>

            <Button
                android:id="@+id/commentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/selector_button_facebook"
                android:text="@string/facebook_activity_comment"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:typeface="sans"
                android:visibility="invisible" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:background="#F4F3F0" >
        </View>

        <EditText
            android:id="@+id/editTextToPublish"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="@string/facebook_activity_put_here_text"
            android:visibility="invisible" >

            <requestFocus />
        </EditText>
    </LinearLayout>

</ScrollView>